Fixed logo on mobile

--- a/style/checkout.css
+++ b/style/checkout.css
@@ -1047,11 +1047,14 @@ a {
 
   #logo {
     position: fixed;
-    left: 31%;
+    top: 6%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     max-width: 170px;
     min-width: 150px;
     background: rgb(167, 95, 74);
-    z-index: 1;
+    box-shadow: inset 0 0 0 5px rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
   }
 
   nav {
